--- a/css/style.css
+++ b/css/style.css
@@ -47,16 +47,11 @@ body {
 }
 
 img[alt="logo"] {
-
     width: 4rem;
-
-    width: 7rem;
-
     aspect-ratio: 1/1;
     object-fit: cover;
     object-position: center;
     
-
 }
 .nav-link {
     color:red;
@@ -98,6 +93,69 @@ img[alt='profile'] img:hover {
     0 0 90px red,
     0 0 100px red,
     0 0 150px red;
+}
+.bubbles {
+    position: relative;
+    display: flex;
+    z-index: -100;
+}
+.bubbles span
+{
+    position: relative;
+    width: 1.875rem;
+    height: 1.875rem;
+    background: #4fc3dc;
+    margin: 0 0.25rem;
+    border-radius: 50%;
+    box-shadow: 0 0 0 0.625rem #4fc3dc44, 0 0 3.125rem #4fc3dc, 0 0 6.25rem #4fc3dc;
+    animation: animate 15s linear infinite;
+    animation-duration:calc(125s / var(--i))
+}
+.bubbles span:nth-child(even)
+{
+    background:red;
 
- main
+    box-shadow: 0 0 0 0.625rem red, 0 0 3.125rem red, 0 0 6.25rem red
+    
+}
+@keyframes animate{
+    0%
+    {
+        transform:translateY(100vh) scale(0);
+    }
+    100% {
+        transform:translateY(-10vh) scale(1);
+    }
+}
+@media screen and (max-width: 768px) {
+    .bubbles {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .bubbles span {
+        margin: 0.5rem;
+    }
+
+    .bubbles span:nth-child(even) {
+        background: #4fc3dc;
+        box-shadow: 0 0 0 0.625rem #4fc3dc44, 0 0 3.125rem #4fc3dc, 0 0 6.25rem #4fc3dc;
+    }
+}
+@media screen and (max-width: 480px) {
+    .bubbles {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .bubbles span {
+        margin: 0.5rem;
+        width: 1.25rem;
+        height: 1.25rem;
+    }
+
+    .bubbles span:nth-child(even) {
+        background: #4fc3dc;
+        box-shadow: 0 0 0 0.3125rem #4fc3dc44, 0 0 1.5625rem #4fc3dc, 0 0 3.125rem #4fc3dc;
+    }
 }
