--- a/css/style.css
+++ b/css/style.css
@@ -167,3 +167,21 @@ img[alt='profile'] img:hover {
         box-shadow: 0 0 0 0.3125rem #4fc3dc44, 0 0 1.5625rem #4fc3dc, 0 0 3.125rem #4fc3dc;
     }
 }
+/* About Section */
+#about {
+    border: 4px solid red;
+   box-shadow:0 0 5px red,
+   0 0 10px red,
+   0 0 40px red;
+    border-radius: 1%;
+    padding: 20px;
+    margin: 20px auto;
+    max-width: 100%;
+}
+.cardAbout {
+    background-color: black;
+    font-size: 17px;
+    padding: 20px;
+    border-radius: 10px;
+    color: white;
+}
