--- a/css/style.css
+++ b/css/style.css
@@ -248,3 +248,33 @@ ul.timeline-list li:before {
     font-family: poppins;
     color: #FF3636;
 }
+#skillglow {
+    box-shadow:0 0 5px red,
+   0 0 10px red,
+   0 0 40px red;
+}
+
+.work {
+    border: 2px solid #FF3636;
+    padding: 10px;
+      box-shadow:0 0 5px red,
+   0 0 10px red,
+   0 0 40px red;
+      background-color:#fff;
+}
+
+
+.card-img-top {
+    object-fit: cover;
+    height: 28.125rem; 
+  }
+  
+  #shadow {
+    box-shadow: 0 0 10px white, 0 0 20px white, 0 0 50px white
+  }
+
+  
+ .testimg {
+    width: 18.75rem;
+    
+ }
