--- a/css/style.css
+++ b/css/style.css
@@ -319,3 +319,19 @@ text-shadow: 0 0 15px white;
 .form-control, .input-group-text {
     border-color: black;
 }
+/* Adjusting the footer so that it fits */
+#low {
+    margin-block: 2rem;
+    margin-top: 2rem; 
+    margin-bottom: 0; 
+    padding-top: 1rem; 
+    padding-bottom: 1rem; 
+    background: white;
+
+ 
+}
+/* Footer content like name and year */
+#lowcontent {
+font-size: 1.313rem;
+
+}
