--- a/css/style.css
+++ b/css/style.css
@@ -352,7 +352,7 @@ font-size: 1.313rem;
     font-family: sans-serif;
   }
   .font {
-    font-family: sans-serif;
+    font-family: "Open Sans", sans-serif;
   }
   #resbutton {
     display: flex;
